# document-management-system

./: .gitignore  pyproject.toml  rename_faktur.py
.superpowers/sdd/: task-1-report.md  task-7-brief.md  task-7-report.md
backend/: .env.example  alembic.ini  config.py  database.py  deps.py  main.py  models.py  pyproject.toml  schemas.py
backend/admin/: router.py
backend/alembic/: env.py
backend/alembic/versions/: 20260628_b3480d1d5868_initial_schema.py
backend/auth/: router.py  utils.py
backend/me/: router.py
backend/tests/: conftest.py  test_admin.py  test_auth.py  test_me.py  test_usage.py
backend/usage/: router.py
core/: api_client.py  rename_faktur.py
dashboard/: package-lock.json  package.json
dashboard/app/: layout.tsx
dashboard/app/admin/users/: route.ts
dashboard/app/auth/login/: route.ts
dashboard/app/billing/: page.tsx
dashboard/app/dashboard/: page.tsx
dashboard/app/forgot-password/: page.tsx
dashboard/app/login/: page.tsx
dashboard/app/me/: route.ts
dashboard/app/register/: page.tsx
dashboard/components/: NavBar.tsx  UsageBar.tsx
dashboard/lib/: api.ts  auth-guard.ts  auth.tsx  jwt.ts
dashboard/lib/db/: schema.ts
docs/superpowers/plans/: 2026-06-21-rename-faktur-ui.md  2026-06-28-dark-mode.md  2026-06-28-saas-mvp.md  2026-06-28-vercel-ts-backend.md
docs/superpowers/specs/: 2026-06-21-rename-faktur-ui-design.md  2026-06-28-dark-mode-design.md  2026-06-28-saas-mvp-design.md  2026-06-28-vercel-ts-backend-design.md
tests/: test_api_client.py  test_core.py
ui/: app.py  login.py  status_bar.py
(+7 files in other folders)
